<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".page5">

    <androidx.cardview.widget.CardView
        android:id="@+id/card2"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="50dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/syn" />
    </androidx.cardview.widget.CardView>

    <EditText
        android:id="@+id/edit2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/title"
        android:inputType="text"
        android:textColorHint="#101010"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card2" />

    <LinearLayout
        android:id="@+id/lyn12"
        android:layout_width="215dp"
        android:layout_height="70dp"
        android:layout_marginTop="25dp"
        android:background="#FF5722"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit2"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="152dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_weight="1"
            android:fontFamily="serif"
            android:text="@string/add2"
            android:textColor="#0F0E0E"
            android:textSize="25dp"
            android:textStyle="bold|italic" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="51dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/add" />
    </LinearLayout>

    <EditText
        android:id="@+id/maniline1"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/desc"
        android:inputType="textMultiLine"
        android:textColorHint="#141313"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lyn12" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:backgroundTint="#FF5722"
        android:text="@string/save"
        android:textColor="#121111"
        android:textColorHint="#121212"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/maniline1" />

</androidx.constraintlayout.widget.ConstraintLayout>