<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".page2">

    <androidx.cardview.widget.CardView
        android:id="@+id/card1"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="50dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/synbig" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/first1"
        android:layout_width="270dp"
        android:layout_height="70dp"
        android:layout_marginTop="100dp"
        android:background="#EDFF5722"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card1">

        <TextView
            android:id="@+id/textView"
            android:layout_width="192dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="75dp"
            android:layout_weight="1"
            android:fontFamily="serif"
            android:shadowColor="#141313"
            android:text="@string/first"
            android:textColor="#101010"
            android:textColorLink="#211F1F"
            android:textSize="25dp"
            android:textStyle="bold|italic" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="105dp"
            android:layout_height="27dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/textformat" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/second2"
        android:layout_width="270dp"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:background="#EDFF5722"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:focusable="true"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/first1">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="146dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_weight="1"
            android:fontFamily="serif"
            android:text="@string/second"
            android:textColor="#121212"
            android:textSize="25dp"
            android:textStyle="bold|italic" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="53dp"
            android:layout_height="28dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/image" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/thered3"
        android:layout_width="270dp"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:background="#EDFF5722"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/second2">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="184dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="65dp"
            android:layout_weight="1"
            android:fontFamily="serif"
            android:text="@string/therd"
            android:textColor="#121212"
            android:textSize="25dp"
            android:textStyle="bold|italic" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="101dp"
            android:layout_height="29dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/clapperboard" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/zir4"
        android:layout_width="270dp"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:background="#EDFF5722"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/thered3">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="172dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="65dp"
            android:layout_weight="1"
            android:fontFamily="serif"
            android:text="@string/four"
            android:textColor="#161515"
            android:textSize="25dp"
            android:textStyle="bold|italic" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="76dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/volume" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>